--- a/style.css
+++ b/style.css
@@ -26,8 +26,130 @@ body {
 .obal {
     width: 960px; /* obsah stránky je omezený do pruhu širokého 960px */
     margin: 0 auto; /* pruh je na stránce vycentrovaný */
+
     background: white;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-}
+
+    }
 
 /* ----- zde začni psát vlastní CSS ----- */
+.menu {
+    height: 10%;
+    color:#25133d;
+    font-size: 1.5rem;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 0.3rem;
+    
+}
+.menu a {
+    text-decoration: none;
+    font-weight: 300;
+}
+
+.menu a h1 {
+    margin: 0;
+    font-weight: 700;
+    font-size: 1.5rem;
+    padding: auto;
+    display: inline;
+}
+
+.hlavni-okno {
+    height: 80%;
+    background-image:url("images/pozadi.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+    
+}
+
+.nadpis {
+color:white;
+font-size: 5.5rem;
+font-weight: 400;
+margin: 0;
+margin-left: 50px;
+}
+
+.slogan {
+    color:white;
+    font-size: 3rem;
+    font-weight: 300;
+    margin-left: 50px;
+}
+
+.tlacitko {
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 300;
+    display:flex;
+    flex-direction: row;
+    justify-content: left;
+    box-shadow: -33px 34px 33px -49px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -33px 34px 33px -49px rgba(0,0,0,0.75);
+    -moz-box-shadow: -33px 34px 33px -49px rgba(0,0,0,0.75);
+    
+}
+
+.tlacitko1 {
+    background-color: #48418e;
+    border: 1px solid white;
+    border-radius: 5px;
+    margin:0px 20px 50px 50px;
+    padding: 15px 10px;
+    
+}
+
+.tlacitko2 {
+    border: 1px solid white;
+    border-radius: 5px;
+    margin:0px 20px 50px 50px;
+    padding: 15px 10px;
+}
+
+
+    
+.telefon img {
+    position: absolute;
+    bottom: 0rem;
+    right: 0rem;
+}
+
+.moznosti {
+    margin: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+.moznosti img {
+    width: 60px;
+}
+
+
+.moznosti .nadpis3 {
+    font-weight: 700;
+    color: #48418e;
+}
+   
+
+.moznost-blok {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 28%;
+    text-align: center;
+}
+
+
+
+.zapati {
+    text-align: center;
+    font-size: 14px;
+    color: silver;
+    background-color:#48418e;
+    padding: 10px 0;
+}
